--- a/js-examples2/index.html
+++ b/js-examples2/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training</title>
 </head>
 <body>
-</body>
-    <h1 id="header">Increase value</h1>
+    <h1 id="header" onmouseover="" >Increase value</h1>
     <p id="value">1</p>
-    <button onclick="increaseValue()">Increase</button>
+    <div>
+        <p>Increment value</p>
+        <input name="increment" id="increment" value="1" style="width: 30px;">
+    </div>
+    <div style="margin-top: 20px;">
+        <button onclick="">Increase</button>
+    </div>
     <script>
-        // simple page with paragraph with default text: 1 and button
-        //  when you click button you increse value of number from paragraph
-
-        // 2. stop processing when value is
-        //    greater than 10 (dont disply greater values than 10) -> print information 
-        //    to console "Value i greater than 10"
-        // 3. when value is greater than 5 change background color of paragraph element to yellow
-        function increaseValue(){
-            var paragraph = document.getElementById("value");
-            // paragraph.style.backgroundColor = 'yellow';
-            var value = paragraph.innerText;
-            value = Number.parseInt(value) + 1;
-            paragraph.innerText = value;
-        }
+        // 1. function: onMouseOver set background color of h1 element to aqua
+        // 2. function: onMouseOut set background color of h1 element to blue
     </script>
+</body>
 </html>
